--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<body>
 		<section id="hero">
 			<div class="section-container text-center mb-40 pt-16">
-				<img src="images/logo.svg" class="mx-auto my-16" />
-				<h3>A history of everything you copy</h3>
+<!-- 				<img src="images/logo.svg" class="mx-auto my-16" />
+				<h3>A history of everything you copy</h3> -->
 				<p class="max-w-3xl mx-auto mb-10 text-2xl text-grayishBlue">
 					Clipboard allows you to track and organize everything you copy.
 					Instantly access your clipboard on all your devices.
